--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,6 @@
 # index page of the website
 # this app tells the weather forecast of different areas
+# a weather app projet based on html css and javascript
 <!DOCTYPE html>
 <html lang="en">
 <head>
