--- a/views/weather.hbs
+++ b/views/weather.hbs
@@ -8,6 +8,7 @@
     <title>Weather App</title>
     <link rel="stylesheet" href="style.css">
 </head>
+# body of the html starts here
 <body>
     <section id="header">
         <h1 style="align-content: center; color: cornflowerblue">Weather App</h1>
