--- a/views/weather.hbs
+++ b/views/weather.hbs
@@ -1,5 +1,6 @@
 # weather page of the app
 # main code for the weather app exists here
+# weather app html code
 <!DOCTYPE html>
 <html lang="en">
 <head>
